# DataSentics

./: README.md
DataSentics/: pyproject.toml
DataSentics/notebook/: CV_exercise_MNIST.ipynb
